apps/base/public-sites/fui-components/fui-components-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fui-components
  namespace: fui-components
spec:
  podSelector:
    matchLabels:
      app: fui-components
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - port: 80
  egress: []
